cmake_minimum_required(VERSION 3.9)
project(leetcode)

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++14 -pthread")
include_directories(${PROJECT_SOURCE_DIR}/src/ds_basic_knowledge/
                    ${PROJECT_SOURCE_DIR}/src/oj/)

add_executable(leetcode src/main.cpp
        src/oj/206_reverse_linked_list/reverse_linked_list.cpp
        src/oj/92_reverse_linked_list_II/reverse_linked_list_II.cpp
        src/oj/92_reverse_linked_list_II/reverse_linked_list_II.h
        src/oj/160_get_intersection_node/getIntersectionNode.cpp
        src/oj/160_get_intersection_node/getIntersectionNode.h
        src/oj/142_detectCycle/detectCycle.cpp
        src/oj/142_detectCycle/detectCycle.h
        src/oj/86_partition_list/partition_list.cpp
        src/oj/86_partition_list/partition_list.h
        src/oj/138_copyRandomList/copyRandomList.cpp
        src/oj/138_copyRandomList/copyRandomList.h
        src/oj/21_mergeTwoLists/mergeTwoLists.cpp
        src/oj/21_mergeTwoLists/mergeTwoLists.h
        src/oj/23_mergeKLists/mergeKLists.cpp
        src/oj/23_mergeKLists/mergeKLists.h
        src/oj/224_basicCalculator/basic_calculator.cpp
        src/oj/224_basicCalculator/basic_calculator.h
        src/oj/225_make_stack_with_queue/stack_use_queue.cpp
        src/oj/225_make_stack_with_queue/stack_use_queue.h
        src/oj/215_Kth_largest_num/kth_largest_num.cpp
        src/oj/215_Kth_largest_num/kth_largest_num.h
        src/oj/295_find_median/find_median.cpp
        src/oj/295_find_median/find_median.h
        src/oj/155_min_stack/min_stack.cpp
        src/oj/155_min_stack/min_stack.h
        src/oj/232_make_queue_using_stacks/queue_use_stack.cpp
        src/oj/232_make_queue_using_stacks/queue_use_stack.h
        src/oj/455_assign_cookies/assign_cookies.cpp
        src/oj/455_assign_cookies/assign_cookies.h
        src/oj/376_wiggle_subsequence/wiggle_subsequence.cpp
        src/oj/376_wiggle_subsequence/wiggle_subsequence.h
        src/oj/78_subsets/subsets.cpp
        src/oj/78_subsets/subsets.h
        src/oj/402_remove_k_digits/remove_k_dig.cpp
        src/oj/402_remove_k_digits/remove_k_dig.h
        src/oj/55_jump_game/jump_game.cpp
        src/oj/55_jump_game/jump_game.h
        src/oj/162_find_peak/find_peak.cpp
        src/oj/162_find_peak/find_peak.h
        src/oj/45_jump_game_II/jump_game_II.cpp
        src/oj/45_jump_game_II/jump_game_II.h
        src/oj/452_burst_balloons/burst_balloons.cpp
        src/oj/452_burst_balloons/burst_balloons.h
        src/oj/315_count_smaller_numbers/count_smaller_numbers.cpp
        src/oj/315_count_smaller_numbers/count_smaller_numbers.h
        src/oj/90_subsets_II/subsets_II.cpp
        src/oj/90_subsets_II/subsets_II.h
        src/oj/113_path_sum_II/path_sum_II.cpp
        src/oj/113_path_sum_II/path_sum_II.h
        src/oj/40_combination_sum_II/combination_sum_II.cpp
        src/oj/40_combination_sum_II/combination_sum_II.h
        src/oj/22_generate_parentheses/generate_parentheses.cpp
        src/oj/22_generate_parentheses/generate_parentheses.h
        src/oj/51_N_queens/n_queens.cpp
        src/oj/51_N_queens/n_queens.h
        src/oj/236_lowest_commonance_ancestor/lowest_commonance_ancestor.cpp
        src/oj/236_lowest_commonance_ancestor/lowest_commonance_ancestor.h
        src/oj/114_flatten_binary_tree2linked_list/flatten_binary_tree2linked_list.cpp
        src/oj/114_flatten_binary_tree2linked_list/flatten_binary_tree2linked_list.h
        src/ds_basic_knowledge/binary_tree_breadth_first_search/binary_tree_breadth_first_search.cpp
        src/ds_basic_knowledge/binary_tree_breadth_first_search/binary_tree_breadth_first_search.h
        src/oj/199_binary_tree_right_side_view/binary_tree_right_side_view.cpp
        src/oj/199_binary_tree_right_side_view/binary_tree_right_side_view.h
        src/ds_basic_knowledge/graph_depth_first_search/graph_depth_first_search.cpp
        src/ds_basic_knowledge/graph_depth_first_search/graph_depth_first_search.h
        src/oj/207_course_schedule/course_schedule.cpp
        src/oj/207_course_schedule/course_schedule.h
        src/ds_basic_knowledge/binary_search/binary_search.cpp
        src/ds_basic_knowledge/binary_search/binary_search.h
        src/oj/35_search_insert_position/search_insert_position.cpp
        src/oj/35_search_insert_position/search_insert_position.h
        src/oj/34_search_range/search_range.cpp
        src/oj/34_search_range/search_range.h
        src/oj/33_search_rotated_sorted_array/search_rotated_sorted_array.cpp
        src/oj/33_search_rotated_sorted_array/search_rotated_sorted_array.h
        src/oj/449_serialize_deserialize_BST/serialize_deserialize_BST.cpp
        src/oj/449_serialize_deserialize_BST/serialize_deserialize_BST.h
        src/ds_basic_knowledge/hash/hash.cpp
        src/ds_basic_knowledge/hash/hash.h
        src/oj/409_longest_palindrome/longest_palindrome.cpp
        src/oj/409_longest_palindrome/longest_palindrome.h
        src/oj/290_word_pattern/word_pattern.cpp
        src/oj/290_word_pattern/word_pattern.h
        src/oj/49_group_anagrams/group_anagrams.cpp
        src/oj/49_group_anagrams/group_anagrams.h
        src/oj/1_two_sum/two_sum.cpp
        src/oj/1_two_sum/two_sum.h
        src/oj/3_length_longest_substring/length_longest_substring.cpp
        src/oj/3_length_longest_substring/length_longest_substring.h
        src/oj/79_exist/exist.cpp
        src/oj/79_exist/exist.h
        src/oj/76_min_window/min_window.cpp
        src/oj/76_min_window/min_window.h
        src/oj/200_num_islands/num_islands.cpp
        src/oj/200_num_islands/num_islands.h
        src/oj/127_ladder_length/ladder_length.cpp
        src/oj/127_ladder_length/ladder_length.h
        src/oj/70_climbStairs/climbStairs.cpp
        src/oj/70_climbStairs/climbStairs.h
        src/oj/198_rob/rob.cpp
        src/oj/198_rob/rob.h
        src/oj/104_maxDepth/maxDepth.cpp
        src/oj/104_maxDepth/maxDepth.h
        src/oj/offer04_searchMatrix/searchMatrix.cpp
        src/oj/offer04_searchMatrix/searchMatrix.h
        src/oj/offer03_findRepeatNumber/findRepeatNumber.cpp
        src/oj/offer03_findRepeatNumber/findRepeatNumber.h
        src/oj/0_listToTree/listToTree.cpp
        src/oj/0_listToTree/listToTree.h
        src/oj/offer07_buildTree/buildTree.cpp
        src/oj/offer07_buildTree/buildTree.h
        src/oj/offer05_replaceSpace/replaceSpace.cpp
        src/oj/offer05_replaceSpace/replaceSpace.h
        src/oj/offer06_reversePrint/reversePrint.cpp
        src/oj/offer06_reversePrint/reversePrint.h src/ds_basic_knowledge/astar/astar.cpp src/ds_basic_knowledge/astar/astar.h src/ds_basic_knowledge/sort/sort.cpp src/ds_basic_knowledge/sort/sort.h)